--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -82,6 +82,8 @@ stages:
           value: $(SubShortName)-signin-shd-cdn
         - name: cdnEndpointName
           value: $(SubShortName)-signin-shd-cdnep
+        - name: keyVaultName
+          value: $(SubShortName)-signin-kv
         displayName: "Deployment [${{var.Key}}]"
         jobs:
         - job: upConCnd
@@ -187,8 +189,6 @@ stages:
                 scriptType: pscore
                 scriptLocation: inlineScript
                 inlineScript: 'az storage account network-rule remove -g $(ShdResourceGroupName) --account-name $(storageAccountName) --ip-address $(agentIp)'
-
-
               
         #      - task: cboroson.cboroson-ReadSecrets.cboroson-ReadSecrets.cboroson-ReadSecrets@1
         #        displayName: 'Read Secrets: '
@@ -216,4 +216,17 @@ stages:
         #          KeyVaultName: $(keyVaultName)
         #          SecretName: cdnAssetsVersion
         #          SecretValue: $(newCdnAssetsVersion)
+
+            - task: AzureCLI@2
+              displayName: 'Write Secrets: cdnAssetsVersion'
+              inputs:
+                ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+                  azureSubscription: $(devServiceConnection)
+                ${{ elseif eq(var.key, 'pr') }}:
+                  azureSubscription: $(prodServiceConnection)
+                ${{ else }}:
+                  azureSubscription: $(testServiceConnection)
+                scriptType: pscore
+                scriptLocation: inlineScript
+                inlineScript: 'az keyvault secret set --name cdnAssetsVersion --vault-name $(keyVaultName) --value $(cdnAssetsVersion)'
 
