--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -7,6 +7,10 @@ trigger:
     - feature/*
 
 parameters:
+- name: cdn 
+  type: boolean
+  displayName: 'New Version of CDN'
+  default: true
 - name: tran 
   type: boolean
   displayName: 'Transformation Deployment'
@@ -113,7 +117,7 @@ stages:
 
                   az storage account network-rule add -g $(ShdResourceGroupName) --account-name $(storageAccountName) --ip-address $publicIp
 
-                  Start-Sleep 180
+                  Start-Sleep 240
 
                   az storage blob delete-batch --account-name $(storageAccountName) --source $(UIContainerName)
 
@@ -133,39 +137,10 @@ stages:
                 Destination: AzureBlob
                 storage: '$(storageAccountName)'
                 ContainerName: '$(UIContainerName)'
-
-            # - task: AzurePowerShell@5
-            #   displayName: 'Set Container Public Access Level to Blob (Public)'
-            #   inputs:
-            #     ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-            #       azureSubscription: $(devServiceConnection)
-            #     ${{ elseif eq(var.key, 'pr') }}:
-            #       azureSubscription: $(prodServiceConnection)
-            #     ${{ else }}:
-            #       azureSubscription: $(testServiceConnection)
-            #     ScriptType: 'InlineScript'
-            #     Inline: >
-            #       Get-AzureRmStorageAccount -ResourceGroupName $(ShdResourceGroupName)
-            #       -Name $(storageAccountName) | Set-AzStorageContainerAcl 
-            #       -Name $(UIContainerName) -Permission Blob
-            #     azurePowerShellVersion: LatestVersion
-
-          #  - task: AzurePowerShell@5
-          #    displayName: 'Purge CDN Content'
-          #    inputs:
-          #      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-          #        azureSubscription: $(devServiceConnection)
-          #      ${{ elseif eq(var.key, 'pr') }}:
-          #        azureSubscription: $(prodServiceConnection)
-          #      ${{ else }}:
-          #        azureSubscription: $(testServiceConnection)
-          #      azurePowerShellVersion: LatestVersion
-          #      ScriptType: 'InlineScript'
-          #      Inline: >
-          #        Get-AzureRmCdnEndpoint -ResourceGroupName $(ShdResourceGroupName) -ProfileName $(azureCdnName) -EndpointName $(cdnEndpointName) | Unpublish-AzureRmCdnEndpointContent -PurgeContent '/*'
-
+                  
             - task: AzureCLI@2
-              displayName: 'Purge CDN Content'
+              displayName: Purge content & Updated CDN Version
+              condition: ${{ parameters.cdn }}
               inputs:
                 ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
                   azureSubscription: $(devServiceConnection)
@@ -175,58 +150,12 @@ stages:
                   azureSubscription: $(testServiceConnection)
                 scriptType: pscore
                 scriptLocation: inlineScript
-                inlineScript: 'az cdn endpoint purge --content-paths /* --profile-name $(azureCdnName) -g $(ShdResourceGroupName) -n $(cdnEndpointName)'
+                inlineScript: |
+                  az cdn endpoint purge --content-paths /* --profile-name $(azureCdnName) -g $(ShdResourceGroupName) -n $(cdnEndpointName) 
 
-            - task: AzureCLI@2
-              displayName: Remove IP Address From Storage Account
-              inputs:
-                ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                  azureSubscription: $(devServiceConnection)
-                ${{ elseif eq(var.key, 'pr') }}:
-                  azureSubscription: $(prodServiceConnection)
-                ${{ else }}:
-                  azureSubscription: $(testServiceConnection)
-                scriptType: pscore
-                scriptLocation: inlineScript
-                inlineScript: 'az storage account network-rule remove -g $(ShdResourceGroupName) --account-name $(storageAccountName) --ip-address $(agentIp)'
-              
-        #      - task: cboroson.cboroson-ReadSecrets.cboroson-ReadSecrets.cboroson-ReadSecrets@1
-        #        displayName: 'Read Secrets: '
-        #        inputs:
-        #          ConnectedServiceName: $(serviceConnection)
-        #          resourceGroupName: $(ShdResourceGroupName)
-        #          KeyVaultName: $(keyVaultName)
-        #          secretOption: single
-        #          secretName: $(secretName)
-
-            - task: PowerShell@2
-              displayName: Inline Powershell
-              inputs:
-                targetType: 'inline'
-                script: |
                   $cdnAssetsVersion = [decimal]$(cdnAssetsVersion)
                   $newCdnAssetsVersion = $cdnAssetsVersion+0.1
-                  Write-Host "vso[task.setvariable variable=cdnAssetsVersion;]$newCdnAssetsVersion"
+                  az keyvault secret set --name cdnAssetsVersion --vault-name $(keyVaultName) --value $newCdnAssetsVersion
 
-        #      - task: cboroson.cboroson.WriteSecrets.cboroson-WriteSecrets.cboroson-WriteSecrets@1
-        #        displayName: 'WriteSecrets: cdnAssetsVersion'
-        #        inputs:
-        #          ConnectedServiceName: $(serviceConnection)
-        #          resourceGroupName: $(resourceGroupName)
-        #          KeyVaultName: $(keyVaultName)
-        #          SecretName: cdnAssetsVersion
-        #          SecretValue: $(newCdnAssetsVersion)
-
-            - task: AzureCLI@2
-              displayName: 'Write Secrets: cdnAssetsVersion'
-              inputs:
-                ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                  azureSubscription: $(devServiceConnection)
-                ${{ elseif eq(var.key, 'pr') }}:
-                  azureSubscription: $(prodServiceConnection)
-                ${{ else }}:
-                  azureSubscription: $(testServiceConnection)
-                scriptType: pscore
-                scriptLocation: inlineScript
-                inlineScript: 'az keyvault secret set --name cdnAssetsVersion --vault-name $(keyVaultName) --value $(cdnAssetsVersion)'
+                  az storage account network-rule remove -g $(ShdResourceGroupName) --account-name $(storageAccountName) --ip-address $(agentIp)
 
