--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -115,6 +115,7 @@ stages:
                       inlineScript: |
                         $publicIp = Invoke-RestMethod -uri https://api.ipify.org
                         az storage account network-rule add -g $(ShdResourceGroupName) --account-name $(storageAccountName) --ip-address $publicIp
+                        Write-Host $publicIp
 
                         do {
                           Start-Sleep 30
@@ -153,7 +154,7 @@ stages:
                       scriptLocation: inlineScript
                       inlineScript: |
                         az cdn endpoint purge --content-paths /* --profile-name $(azureCdnName) -g $(ShdResourceGroupName) -n $(cdnEndpointName) 
-                        
+
                         if($env:newCdnV){
                           $cdnAssetsVersion = [decimal]$(cdnAssetsVersion)
                           $newCdnAssetsVersion = $cdnAssetsVersion+0.1
