--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -119,6 +119,7 @@ stages:
                         do {
                           Start-Sleep 30
                           $results=$(az storage blob delete-batch --account-name $(storageAccountName) --source $(UIContainerName))
+                          Write-Host $results 'lvl1'
                         } until ($results -NotLike "*blocked*")
                         
                         Write-Host "##vso[task.setvariable variable=agentIp]$publicIp"
